[package]
name = "hass-light-eww"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["serde_derive", "derive"] }
serde_json = "1.0.94"
serde_plain = "1.0.1"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["net"] }
url = "2.3.1"
